<resources>
    <string name="app_name">婚礼纪</string>


    <!--工具页面-->
    <string name="guide_button_login">登陆</string>
    <string name="guide_button_regist">注册</string>




    <!--工具页面-->
    <string name="Tool_Title">结婚工具</string>
    <string name="Tool_TitleRight">分享应用</string>
    <string name="Tool_TitleFree">海量免费模板</string>
    <string name="Tool_TitlePlan">结婚任务</string>
    <string name="Tool_TitleInvitation">电子请帖</string>
    <string name="Tool_TitleStudy">3分钟学会备婚</string>
    <string name="Tool_budget">结婚预算</string>
    <string name="Tool_process">结婚当日流程</string>
    <string name="Tool_wechat">微信墙</string>
    <string name="Tool_seat">排座位</string>
    <string name="Tool_lucky_day">结婚吉日</string>
    <string name="Tool_registry">结婚登记处</string>
    <string name="Tool_story">结婚故事</string>
    <string name="Tool_amounts">礼金记账本</string>

    <!--工具跳转婚礼纪页面-->
    <string name="Headbtn">立即体验</string>
    <string name="Headinvitation">电子请帖</string>


<!--home-->

    <!--home    head-->
    <string name="head1">全国</string>
    <string name="head1_editText">搜索商家.套餐.话题</string>
    <string name="item2_home_text4">回复</string>

    <!--home    city-->
    <string name="city_edithint">搜索你所选择的城市</string>
    <string name="city_text1">当前所在</string>
    <string name="city_text2">国内热门城市</string>
    <string name="city_text2_text1">杭州</string>
    <string name="city_text2_text2">北京</string>
    <string name="city_text2_text3">上海</string>
    <string name="city_text2_text4">深圳</string>
    <string name="city_text2_text5">西安</string>
    <string name="city_text2_text6">成都</string>
    <string name="city_text2_text7">广州</string>
    <string name="city_text2_text8">武汉</string>
    <string name="city_text2_text9">南京</string>
    <string name="city_text2_text10">重庆</string>
    <string name="city_text2_text11">苏州</string>
    <string name="city_text2_text12">天津</string>
    <string name="city_text2_text13">厦门</string>
    <string name="city_text2_text14">三亚</string>
    <string name="city_text2_text15">长沙</string>
    <string name="city_text2_text16">郑州</string>



    <!--jump页面-->
    <string name="jumptitle">0元试用</string>

    <!--我的页面-->
    <string name="mine_titlebar_name">我的</string>
    <string name="mine_user_name">用户名</string>
    <string name="mine_marryDate">婚期:</string>
    <string name="mine_dateXX">201X-XX-XX</string>

    <string name="mine_appointment">我的预约</string>
    <string name="mine_order">我的订单</string>
    <string name="mine_buyerCar">购物车</string>
    <string name="mine_sign">签到</string>
    <string name="mine_money_name">钱包</string>
    <string name="mine_money_right">红包、兑换码</string>
    <string name="mine_financial_name">金融</string>
    <string name="mine_financial_right">分期、贷款、办卡</string>
    <string name="mine_collect_name">收藏</string>
    <string name="mine_collect_right">收藏的套餐、案例、商品和专题</string>
    <string name="mine_focus_name">关注</string>
    <string name="mine_focus_right">关注的标签、商家和用户</string>
    <string name="mine_topic_name">话题</string>
    <string name="mine_topic_right">发布和收藏的话题</string>
    <string name="mine_activity_name">活动</string>
    <string name="mine_activity_right">0元活动</string>
    <string name="mine_imMerchant_name">我是商家</string>
    <string name="mine_imMerchant_right">免费入驻</string>
    <string name="mine_contactService_name">联系客服</string>
    <string name="mine_contactService_right"></string>


    <!--我的页面->setting页面-->
    <string name="setting_title">设置</string>
    <string name="setting_account_safety">账号安全</string>
    <string name="setting_opinion_feedback">意见反馈</string>
    <string name="setting_give_reputation">给婚礼纪好评</string>
    <string name="setting_about_us">关于我们</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_cache_unit">M</string>
    <string name="setting_exit">退出登陆</string>


</resources>
