<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:divider="@drawable/tool_divider"
                android:showDividers="middle"
                android:layout_height="@dimen/ToolImageHeight"
                android:layout_below="@id/tool_head_img"
                android:orientation="horizontal">
    <RelativeLayout
        android:clickable="true"
        android:id="@+id/tool_left"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/Weddingplan"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/ImageML"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:src="@drawable/icon_wedding_task"
            />
        <TextView
            android:id="@+id/marry_task"
            android:layout_marginLeft="@dimen/MarginRingt"
            android:layout_marginTop="@dimen/tool_relative_margintop"
            android:layout_toRightOf="@+id/Weddingplan"
            android:textSize="@dimen/tool_relative_big_textSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tool_TitlePlan"
            />

        <TextView
            android:textColor="@color/colortextunchecked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tool_TitleStudy"
            android:layout_alignLeft="@+id/marry_task"
            android:textSize="@dimen/tool_relative_small_textSize"
            android:layout_toRightOf="@id/Weddingplan"
            android:layout_alignBottom="@id/Weddingplan"
            />
    </RelativeLayout>
    <RelativeLayout
        android:clickable="true"
        android:id="@+id/tool_right"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ImageView

            android:id="@+id/Invitation"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/ImageML"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:src="@drawable/icon_wedding_card"
            />
        <TextView
            android:id="@+id/ele_invitation"
            android:layout_marginTop="@dimen/tool_relative_margintop"
            android:layout_marginLeft="@dimen/MarginRingt"
            android:layout_toRightOf="@+id/Invitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tool_relative_big_textSize"
            android:text="@string/Tool_TitleInvitation"
            />

        <TextView
            android:textColor="@color/colortextunchecked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tool_TitleFree"
            android:textSize="@dimen/tool_relative_small_textSize"
            android:layout_alignLeft="@+id/ele_invitation"
            android:layout_toRightOf="@id/Invitation"
            android:layout_alignBottom="@id/Invitation"
            />
    </RelativeLayout>
</LinearLayout>